<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:layout_centerVertical="true"
            android:contentDescription="@string/description"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:src="@drawable/menu_icon" />

        <ImageView
            android:background="@color/banner_background"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/description"
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:padding="5dp"
            android:src="@drawable/add_missing_place_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/brandon_grotesque"
            android:text="@string/name"
            android:textColor="@color/app_name"
            android:textSize="35sp" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/app_name"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:elevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/search_text" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:src="@drawable/search_icon"
                android:contentDescription="@string/description2"/>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/description2"
                    android:src="@drawable/club_logo">

                </ImageView>
            </RelativeLayout>

            <TextView
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/hotel"
                android:textColor="@color/black"
                android:textAlignment="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/description2"
                    android:src="@drawable/club_logo">

                </ImageView>
            </RelativeLayout>

            <TextView
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/club1"
                android:textAlignment="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:layout_centerInParent="true"
                    android:contentDescription="@string/description2"
                    android:src="@drawable/club_logo">

                </ImageView>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/club3"
                android:textAlignment="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"

                    android:contentDescription="@string/description2"
                    android:src="@drawable/club_logo">

                </ImageView>
            </RelativeLayout>

            <TextView
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/club2"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>